--- a/www/templates/game-detail.html
+++ b/www/templates/game-detail.html
@@ -1,15 +1,21 @@
 <!--
   This template loads for the 'tab.scorepad-detail' state (app.js)
-  'scorepad' is a $scope variable created in the scorepadsCtrl controller (controllers.js)
-  The scorepadsCtrl pulls data from the scorepads service (service.js)
+  'game' is a $scope variable created in the gameDetailCtrl controller (controllers.js)
+  The gameDetailCtrl pulls data from the scorepads service (service.js)
   The scorepads service returns an array of scorepad data
 -->
 <ion-view title="{{game.name}}">
   <ion-content has-header="true">
       <ion-list>
-          <ion-item ng-repeat="player in game.players" type="item-text-wrap">
+          <ion-item ng-repeat="player in game.players" type="item-text-wrap" class="player" detect-gestures gesture-type="tap">
               <span class="player-name">{{player.name}}</span>
               <span class="player-score">{{player.score}}</span>
+              <div class="playerButtonBar hidden">
+                  <button class="addButton">+</button>
+                  <button class="subButton">-</button>
+                  <button class="setButton">=</button>
+                  <input type="number" />
+              </div>
           </ion-item>
       </ion-list>
   </ion-content>
