--- a/www/templates/scorepads.html
+++ b/www/templates/scorepads.html
@@ -1,7 +1,7 @@
 <ion-view title="scorepads">
   <ion-content>
     <ion-list>
-      <ion-item ng-repeat="scorepad in scorepads" type="item-text-wrap" href="#/tab/scorepad/{{scorepad.id}}">
+      <ion-item ng-repeat="scorepad in scorepads" type="item-text-wrap" href="#/scorepad/{{scorepad.id}}">
         {{scorepad.name}}
       </ion-item>
     </ion-list>
