--- a/www/templates/game-detail.html
+++ b/www/templates/game-detail.html
@@ -16,7 +16,7 @@
               <button ng-click="scoreChangeButtonHandler('add',{{$index}})" class="addButton">+</button>
               <button ng-click="scoreChangeButtonHandler('sub',{{$index}})" class="subButton">-</button>
               <button ng-click="scoreChangeButtonHandler('set',{{$index}})" class="setButton">=</button>
-              <input class="numberInput" type="number" />
+              <input class="numberInput" maxlength="5" type="tel" />
           </div>
           </div>
       </ion-list>
