--- a/www/templates/scorepads.html
+++ b/www/templates/scorepads.html
@@ -1,4 +1,4 @@
-<ion-view title="scorepads">
+<ion-view title="Scorepads">
   <ion-content>
     <ion-list>
       <ion-item ng-repeat="scorepad in scorepads" type="item-text-wrap" href="#/scorepad/{{scorepad.id}}">
@@ -6,4 +6,7 @@
       </ion-item>
     </ion-list>
   </ion-content>
+  <div class="bar bar-footer">
+      <a class="button button-balanced" href="#/scorepads/new">New Scorepad</a>
+  </div>
 </ion-view>
