Create and reset games now. Hooray!

--- a/www/templates/game-detail.html
+++ b/www/templates/game-detail.html
@@ -21,4 +21,7 @@
           </div>
       </ion-list>
   </ion-content>
+  <div class="bar bar-footer">
+      <button ng-click="resetGame()" class="button button-balanced">Reset Game</button>
+  </div>
 </ion-view>
