--- a/www/templates/scorepad-detail.html
+++ b/www/templates/scorepad-detail.html
@@ -12,4 +12,7 @@
           </ion-item>
       </ion-list>
   </ion-content>
+  <div class="bar bar-footer">
+      <a class="button button-balanced" href="#/scorepad/{{scorepad.id}}/new">New Game</a>
+  </div>
 </ion-view>
