Can now delete games and scorepads!

--- a/www/templates/new-scorepad.html
+++ b/www/templates/new-scorepad.html
@@ -9,6 +9,7 @@
                 minlength="1"
                 placeholder="E.g. Scrabble, Rummy, etc."
                 ng-model="data.name"
+                autocomplete="off"
                 required/>
         </div>
         <div class="field">
@@ -19,6 +20,7 @@
             minlength="1"
             placeholder="Enter 0 for no winning score."
             ng-model="data.winScore"
+            autocomplete="off"
             required/>
         </div>
         <div class="bar bar-footer">
