--- a/www/templates/new-game.html
+++ b/www/templates/new-game.html
@@ -9,6 +9,7 @@
                 minlength="1"
                 placeholder="E.g. {{scorepad.name}} 1, etc."
                 ng-model="data.name"
+                autocomplete="off"
                 required/>
         </div>
         <div class="field">
@@ -17,6 +18,7 @@
             name="player1"
             maxlength="15"
             ng-model="data.player1"
+            autocomplete="off"
             required/>
         </div>
         <div class="field">
@@ -25,6 +27,7 @@
             name="player1"
             maxlength="15"
             ng-model="data.player2"
+            autocomplete="off"
             />
         </div>
         <div class="field">
@@ -33,6 +36,7 @@
             name="player1"
             maxlength="15"
             ng-model="data.player3"
+            autocomplete="off"
             />
         </div>
         <div class="field">
@@ -41,6 +45,7 @@
             name="player1"
             maxlength="15"
             ng-model="data.player4"
+            autocomplete="off"
             />
         </div>
         <div class="bar bar-footer">
