--- a/www/templates/new-scorepad.html
+++ b/www/templates/new-scorepad.html
@@ -1,5 +1,5 @@
 <ion-view title="New Scorepad">
-  <ion-content padding="true">
+  <ion-content padding="true" overflow-scroll="true">
     <form name="newScorepad" ng-submit="submit(data)">
         <div class="field">
             <label for="name">Scorepad Title:</label>
