--- a/www/templates/scorepads.html
+++ b/www/templates/scorepads.html
@@ -1,5 +1,5 @@
 <ion-view title="Scorepads">
-  <ion-content>
+  <ion-content overflow-scroll="true">
     <ion-list>
       <ion-item ng-repeat="scorepad in scorepads" href="#/scorepad/{{scorepad.id}}">
         {{scorepad.name}}
