--- a/www/css/style.css
+++ b/www/css/style.css
@@ -132,23 +132,30 @@ ion-content, .scroll, form {
 }
 
 form .field {
-    margin-top: 20px;
+  margin-bottom: 25px;
 }
 
 form .field:first-child {
-    margin-top: 0px;
+  margin-top: 0px;
 }
 
 form label {
     font-size: 16px;
+    display: none;
 }
 
 form .field input {
   box-sizing: border-box;
-  border: thin solid #999;
-  border-radius: 4px;
+  border: none;
+  border-bottom: thin solid #aaa;
   padding: 0 3px;
   width: 100%;
+}
+
+form h2 {
+  font-size: 1.5em;
+  font-weight: 300;
+  margin-bottom: 0;
 }
 
 .deleteButton {
