--- a/www/templates/new-scorepad.html
+++ b/www/templates/new-scorepad.html
@@ -1,13 +1,14 @@
 <ion-view title="New Scorepad">
   <ion-content padding="true" overflow-scroll="true">
     <form name="newScorepad" ng-submit="submit(data)">
+        <h2>Game</h2>
         <div class="field">
             <label for="name">Scorepad Title:</label>
             <input type="text"
                 name="name"
                 maxlength="20"
                 minlength="1"
-                placeholder="E.g. Scrabble, Rummy, etc."
+                placeholder="What are you playing?"
                 ng-model="data.name"
                 autocomplete="off"
                 required
@@ -19,16 +20,18 @@
             name="winScore"
             maxlength="5"
             minlength="1"
-            placeholder="Leave blank for no winning score."
+            placeholder="Winning Score"
             ng-model="data.winScore"
             autocomplete="off"
             />
         </div>
+        <h2>Players</h2>
         <div class="field">
             <label for="player1">Player 1:</label>
             <input type="text"
             name="player1"
             maxlength="15"
+            placeholder="Player 1"
             ng-model="data.player1"
             autocomplete="off"
             required
@@ -39,6 +42,7 @@
             <input type="text"
             name="player1"
             maxlength="15"
+            placeholder="Player 2"
             ng-model="data.player2"
             autocomplete="off"
             />
@@ -48,6 +52,7 @@
             <input type="text"
             name="player1"
             maxlength="15"
+            placeholder="Player 3"
             ng-model="data.player3"
             autocomplete="off"
             />
@@ -57,6 +62,7 @@
             <input type="text"
             name="player1"
             maxlength="15"
+            placeholder="Player 4"
             ng-model="data.player4"
             autocomplete="off"
             />
