--- a/www/templates/scorepads.html
+++ b/www/templates/scorepads.html
@@ -1,5 +1,5 @@
 <ion-view title="Scorepads">
-  <ion-content overflow-scroll="true">
+  <ion-content>
     <div class="empty-state" ng-if="scorepads.length < 1">
       <div class="empty-wrapper">
         <p>
