--- a/www/css/style.css
+++ b/www/css/style.css
@@ -56,6 +56,7 @@ ion-content, .scroll, form {
 
 .player {
   border-bottom: thin solid #ddd;
+  -webkit-transition: transform 0.2s ease-in;
   transition: transform 0.2s ease-in;
 }
 
@@ -87,6 +88,7 @@ ion-content, .scroll, form {
   font-size: 18px;
   position: absolute;
   top: 1px;
+  -webkit-transition: transform 0.2s ease-in;
   transition: transform 0.2s ease-in;
   background-color: #f0b840;
 }
